--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.0",
+    "@tauri-apps/api": "^2.9.1",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-window": "^2.2.3"
+    "react-window": "^2.2.3",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
